--- a/fc_improve/src/net/ycii/resource/jdbc.properties
+++ b/fc_improve/src/net/ycii/resource/jdbc.properties
@@ -11,6 +11,6 @@ jdbc.url = jdbc:mysql://localhost:3306/fc_improve?useUnicode=true&characterEncod
 jdbc.username = root
 jdbc.password = 123456
 
-#jdbc.url = jdbc:mysql://120.25.205.82:3306/fc_improve?useUnicode=true&characterEncoding=utf-8
-#jdbc.username = root
-#jdbc.password = freedom
+#jdbc.url = jdbc:mysql://39.108.85.212:3306/fc_improve?useUnicode=true&characterEncoding=utf-8
+#jdbc.username = jack
+#jdbc.password = www..1994
